# Langchain-Masterclass

./: main.py  pyproject.toml  requirements.txt
1.BasicLLMCall/: 1_openai_llm_call.py  2_groq_llm_call.py  3_google_llm_call.py  4_llm_with_init_chat_model_call.py
10.Retrievers/: 1_wikipedia_retriever.py  2_document_retriever.py  3_maximal_mariginal_relevance_reciever.py
11.RAG/: 1_basic_rag.py
11.RAG/docs/: google_.csv
2.Prompts/: 1_static_prompt.py  2_dynamic_prompt.py  3_chat_prompt_template.py  project.py
3.StructuredResponses/: 1_without_structure.py  2_typeddict.py  3_annotated_typeddict.py  4_pydantic_response.py
4.OutputParsers/: 1_str_output_parser.py  2_json_output_parser.py  3_pydantic_output_parser.py
5.Chains/: 1_simple_chain.py  2_sequencial_chain.py  3_conditional_chain.py  4_parallel_chain.py
6.DocumnetLoaders/: 1_text_loader.py  2_pdf_loader.py  3_directory_loader.py  4_webbase_loader.py  5_csv_loader.py
7.TextSplitters/: 1_character_text_splitter.py  2_recursice_character_text_splitter.py
8.Embeddings/: 1_openai_embeddings.py
9.VectorStore/: 1_chroma_db.py  2_faiss.py
config/: config.py
