[project]
name = "langchain-masterclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "onnxruntime<1.20",
    "pydantic>=2.12.5",
    "pypdf>=6.7.4",
    "python-dotenv>=1.2.1",
    "numpy<2",
    "faiss-cpu==1.8.0",
    "chromadb>=1.5.2",
    "langchain-chroma>=1.1.0",
    "wikipedia>=1.4.0",
]
